增加cglib 代理示例

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>guava</artifactId>
             <version>20.0</version>
         </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
